--- a/ports/rx/Makefile
+++ b/ports/rx/Makefile
@@ -489,6 +489,7 @@ SRC_C += gccollect.c
 SRC_C += help.c
 SRC_C += i2c.c
 SRC_C += irq.c
+SRC_C += lcd.c
 SRC_C += led.c
 SRC_C += machine_i2c.c
 SRC_C += machine_spi.c
